breve modificacion en las reglas y nueva version y dominio

--- a/templates/reglas.html
+++ b/templates/reglas.html
@@ -5,7 +5,7 @@
     <h2>Reglas</h2>
 
     <ol>
-        <li>Los resultados se podrán completar hasta 24 hs. antes del primer partido del mundial. Los resultados para las rondas de la llave (8vos/4tos/Semi/Final) se podrán cargar hasta 24 hs. antes del primer partido de la ronda.</li>
+        <li>Los resultados se podrán completar hasta 1 hora antes del primer partido del mundial. Los resultados para las rondas de la llave (8vos/4tos/Semi/Final) se podrán cargar hasta 1 hora antes del primer partido de la ronda.</li>
         <li>El costo para participar es de $50 por persona. Se abona una sola vez para todo el mundial.</li>
         <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
         <li>El que no cargue los resultados a tiempo, no podrá participar de esa ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
@@ -19,7 +19,7 @@
         <ul>
             <li>Acertar el resultado final de un partido: 30 puntos.</li>
             <li>Acertar el marcador de un partido: 15 puntos. Ej: Si se marca que Argentina ganará 4-0 a Bosnia y el partido termina 2-1 en favor a Argentina, se sumarán 30 puntos (por acertar que Argentina gana). Si el partido termina 4-0 en favor a Argentina, además de los 30 puntos se sumarán 15 por acertar el marcador. Pero si ese partido Argentina lo pierde o empata, no se suma ningún punto.</li>
-            <li>Acertar quien mete el primer gol de cada partido: 10 puntos.</li>
+            <li>Acertar quien mete el primer gol de cada partido: 5 puntos.</li>
             <li>Se sumarán puntos extras en caso de acertar quién es el campeón, segundo, tercer y cuarto puesto, goleador del campeonato y cuál será la posición final de Argentina. Los puntajes se determinarán de la siguiente manera:
             <ul>
                 <li>Campeón: 100 puntos.</li>
