--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <script src='/scripts/countdown.js'></script>
 
 <script>
-    CountDownTimer('{{ronda.limite}}', 'countdown');
+    CountDownTimer('{{ronda.diff_tiempo}}', 'countdown');
 </script>
 
 
