mensaje que indica que el user no debe tener espacios

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 {% block body_content%}
 <h2>Registro</h2>
 <p>
-Crea tu usuario con tu nombre y apellido para una fácil identificación.
+Crea tu usuario con tu nombre y apellido (sin espacios) para una fácil identificación.
 </p>
 
 <form method="post" class="simple-form">
