--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,7 +25,7 @@ Crea tu usuario con tu nombre y apellido (sin espacios) para una fácil identifi
                 <td class="error">{{error_verify}}</td>
             </tr>
             <tr>
-                <td class="label">Email (opcional)</td>
+                <td class="label">Email</td>
                 <td><input type="text" name="email" class="simple-input" value="{{email}}"/></td>
                 <td class="error">{{error_email}}</td>
             </tr>
