Reglas + fix equipos en campeon, 2do, 3ro y 4to

--- a/static/stylesheets/estudioindex.css
+++ b/static/stylesheets/estudioindex.css
@@ -18,6 +18,11 @@ body{
 	font-size: 62.5%
 }
 
+.reglas {
+    color:#dddddd;
+    font-size: 150%;
+}
+
 .btn, a , .btn-fwc, button {
 	-webkit-transition: All ease-out .5s;
 	-moz-transition: All ease-out .5s;
