Cambios de Edu en las reglas

--- a/templates/reglas2.html
+++ b/templates/reglas2.html
@@ -8,15 +8,18 @@
     <div class="col-sm-8">
         <h3>Generales</h3>
 <ol>
-    <li>El costo para participar es de $300 por persona. Se abona una sola vez para todo el mundial. El pago puede realizarse en efectivo, por mercado pago o vía transferencia bancaria.</li>
-    <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
+    <li>Este es <b>un prode recreativo hecho entre amigos</b>, con el fin de divertirnos y ponerle un plus al sentimiento del Mundial, por lo que se da por sentado que la Organización
+actúa de buena fe.</li>
+    <li>El costo para participar es de <b>$300 por persona</b>. Se abona una sola vez para todo el mundial. El pago puede realizarse en efectivo, por mercado pago o vía transferencia bancaria.</li>
+    <li><b>El dinero recaudado es totalmente repartido en premios.</b> El participante que haga mas puntos, se llevará el <b>70%</b> del total recaudado.  Para el segundo <b>20%</b>, y para el tercero <b>10%</b>.</li>
     <li>El que no cargue los resultados a tiempo, no podrá participar de esa ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
     <li>Para participar hay que registrarse y cargar los resultados en este sitio (<a href="https://elprodedelmundial2018.appspot.com">https://elprodedelmundial2018.appspot.com</a>)</li>
+    <li>Para el registro se solicitará un mail y un celular solo para los fines de contacto e información sobre el prode. Es posible que la Organización coordine un grupo de difusión vía Whatsapp para recordar límites de carga de Planillas, Ganadores y cualquier otra aclaración que sea necesaria. </li>
 </ol>
 <h3>Carga de pronósticos</h3>
 <ol>
-    <li>EL tiempo para cargar los resultados por fase está estipulado en el contador del sitio. Una vez pasado el tiempo ya no se podrán cargar los resultados.</li>
-    <li>Se deben cargar resultados en todas las fases (Primera Ronda/ 8vos / 4 tos / Semi / Final), para lo cual hay que estar atento al contador en todas las fases. No es excluyente participar de todas las rondas, aunque en las rondas donde no participe no sumara puntos.</li>
+    <li>EL tiempo para cargar los resultados por fase está estipulado en el contador del sitio. <b>Una vez pasado el tiempo ya no se podrán cargar los resultados.</b></li>
+    <li>Se deben cargar resultados para <b>cada fase</b> (Primera Ronda/ 8vos / 4 tos / Semi / Final), para lo cual hay que estar atento al contador en todas las fases. No es excluyente participar de todas las rondas, aunque en las rondas donde no participe no sumara puntos.</li>
     <li>Los resultados reales se irán actualizando en el sitio junto con la tabla de posiciones.</li>
     <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes (una vez cerrado el período de carga de resultados para esa ronda).</li>
 </ol>
@@ -26,10 +29,10 @@
     <li>
     Los puntajes se calculan de la siguiente manera:
     <ul>
-        <li>Acertar el resultado final de un partido: 30 puntos.</li>
-        <li>Acertar el marcador de un partido: 15 puntos. Ej: Si se marca que Rusia ganará 4-0 a Arabia Saudita y el partido termina 2-1 en favor a Rusia, se sumarán 30 puntos (por acertar que Rusia gana - resultado). Si el partido termina 4-0 en favor a Rusia, además de los 30 puntos se sumarán 15 por acertar el marcador. Pero si ese partido Rusia lo pierde o empata, no se suma ningún punto.</li>
-        <li>Acertar quien mete el primer gol de cada partido: 10 puntos. En el caso de que el resultado sea 0-0, nadie sumará puntos.</li>
-        <li>En los partidos donde juegue Argentina, los puntos valen doble (tanto para resultado, marcador y primer gol).</li>
+        <li>Acertar el resultado final de un partido: <b>30 puntos.</b></li>
+        <li>Acertar el marcador de un partido: <b>15 puntos.</b> Ej: Si se marca que Rusia ganará 4-0 a Arabia Saudita y el partido termina 2-1 en favor a Rusia, se sumarán 30 puntos (por acertar que Rusia gana - resultado). Si el partido termina 4-0 en favor a Rusia, además de los 30 puntos se sumarán 15 por acertar el marcador. Pero si ese partido Rusia lo pierde o empata, no se suma ningún punto.</li>
+        <li>Acertar quien mete el primer gol de cada partido: <b>10 puntos.</b> En el caso de que el resultado sea 0-0, nadie sumará puntos.</li>
+        <li><b>En los partidos donde juegue Argentina, los puntos valen doble</b> (tanto para resultado, marcador y primer gol).</li>
         <li>Se sumarán puntos extras en caso de acertar quién es el campeón, segundo, tercer y cuarto puesto, goleador del campeonato, goleador de Argentina y cuál será la posición final de Argentina. Los puntajes se determinarán de la siguiente manera:
         <ul>
             <li>Campeón: 100 puntos.</li>
@@ -52,7 +55,7 @@
     <h3>Consideraciones finales</h3>
     <ol>
     <li>Puede participar cualquiera, mientras cumpla con las condiciones mencionadas arriba.</li>
-    <li>Pueden invitar a cualquier amigo/conocido/etc, pero serán uds. los responsables de recaudar la plata de cada uno de ellos.</li>
+    <li>Pueden e INVITEN a amigos/compañeros de trabajo/flia/etc, cuantos más seamos mejor! Más premios para los ganadores! Pero serán uds. los responsables de asegurar el pago a la inscripción del prode.</li>
     <li>Por cualquier duda, comentario o propuesta que surja, lo mismo para cualquier error que detecten en el calculo de los puntos, sin duda enviar un mail a la dirección del Prode del mundial: <a href="mailto:prodemundialok2018@gmail.com">prodemundialok2018@gmail.com</a></li>
 </ol>
 
