Nueva lista de jugadores y celular para registrarse

--- a/templates/login2.html
+++ b/templates/login2.html
@@ -22,7 +22,7 @@
     {{error_login}}
   </div>
   {% endif %}
-  <button type="submit" class="btn btn-primary">Login</button>
+  <button type="submit" class="btn-fwc">Login</button>
 </form>
 {% endblock %}
 
