--- a/templates/signup2.html
+++ b/templates/signup2.html
@@ -59,52 +59,22 @@ Crea tu usuario con tu nombre y apellido (sin espacios) para una fácil identifi
       </div>
     </div>
 
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">Celular</label>
+      <div class="col-sm-7">
+          <input type="text" name="celular" class="form-control" value="{{celular}}">
+      </div>
+      <div class="col-sm-3">
+        <small class="text-danger">
+            {{error_celular}}
+        </small>
+      </div>
+    </div>
 
 
 
-  <button type="submit" class="btn btn-primary">Registrarse</button>
+
+  <button type="submit" class="btn-fwc">Registrarse</button>
 </form>
 {% endblock %}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="container">
-  <form>
-    <div class="form-group row">
-      <label for="inputEmail" class="col-sm-2 col-form-label text-success">Email</label>
-      <div class="col-sm-7">
-        <input type="email" class="form-control is-valid" id="inputEmail" placeholder="Email">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="inputPassword" class="col-sm-2 col-form-label text-danger">Password</label>
-      <div class="col-sm-7">
-        <input type="password" class="form-control is-invalid" id="inputPassword" placeholder="Password">
-      </div>
-      <div class="col-sm-3">
-        <small id="passwordHelp" class="text-danger">
-          Must be 8-20 characters long.
-        </small>      
-      </div>
-    </div>
-  </form>
-</div>
