--- a/templates/base2.html
+++ b/templates/base2.html
@@ -55,6 +55,23 @@
                 {% endif %}
             </ul>
 
+            <div class="title">
+                <div class="logo">
+                    <img src="/images/254645_w.png" width="150" height="150" alt=""/>
+                </div>
+                <div class="texto">
+                    <h1>PRODE</h1>
+                    <h3>COPA MUNDIAL DE LA FIFA RUSIA 2018™</h3>
+                    <h4>14 JUNIO - 15 JULIO</h4>
+                    <ul class="redes">
+                        <li><a href="https://www.facebook.com/fifaworldcup" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://twitter.com/FifaWorldCup_es" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/fifaworldcup/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.youtube.com/FIFATV" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+
             {% block body_content %}
             {% endblock %}
         </div>
