--- a/templates/base2.html
+++ b/templates/base2.html
@@ -16,16 +16,8 @@
         <div class="container text-center">
             <ul class="nav nav-tabs">
                 {% if user %}
-                <li class="nav-item-dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Instancias</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/">Primera</a>
-                        <a class="dropdown-item disabled" href="/?ronda=Octavos">Octavos</a>
-                        <a class="dropdown-item disabled" href="/?ronda=Cuartos">Cuartos</a>
-                        <a class="dropdown-item disabled" href="/?ronda=Semifinal">Semifinal</a>
-                        <a class="dropdown-item disabled" href="/?ronda=TercerPuesto">Tercer puesto</a>
-                        <a class="dropdown-item disabled" href="/?ronda=Final">Final</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/posiciones">Posiciones</a>
