--- a/templates/index2.html
+++ b/templates/index2.html
@@ -43,19 +43,24 @@
 </div>
 {% endif %}
 
+
+-->
 <div class="selector-rondas">
-    <ul class="menu-rondas">
+    <ul class="nav nav-tabs">
         {% for r in rondas %}
         <li
+        class="nav-item"
+        ><a
         {% if ronda.ronda == r.ronda %}
-        class="seleccionada"
+            class="nav-link active"
+        {% else %}
+            class="nav-link"
         {% endif %}
-        ><a href="/?ronda={{r.ronda}}">{{r.ronda}}</a> </li>
+            href="/?ronda={{r.ronda}}">{{r.ronda}}</a> </li>
         {% endfor %}
     </ul>
 </div>
 
--->
 {% include "rondas2.html" %}
 
 {% endblock %}
